<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:ems="7"
            android:text="@string/additemcategory"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addItemCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/additemcategory"
            android:maxLength="100"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCategorySave"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/btnsave" />

        <Button
            android:id="@+id/btnCategoryCancel"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/btncancel" />
    </LinearLayout>

</LinearLayout>