<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaptech.shoppingcart.Home" >

    <!-- Header Part -->

    <RelativeLayout
        android:id="@+id/homeHeader"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:background="@color/headerfootercolor" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/homeheadertext"
            android:textColor="@color/headerfooterfontcolor"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Footer Part -->

    <RelativeLayout
        android:id="@+id/homeFooter"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:background="@color/headerfootercolor" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/homeFootertext"
            android:textColor="@color/headerfooterfontcolor"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Body Part -->
<ScrollView android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:scrollbars="vertical">
    <RelativeLayout
        android:id="@+id/homeBody"
        android:layout_width="fill_parent"
        android:layout_height="419dp"
        android:layout_above="@+id/homeFooter"
        android:layout_below="@+id/homeHeader"
        android:background="@color/bodycolor"
        android:padding="20sp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/round"
            android:orientation="vertical"
            android:padding="10sp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="128sp"
                    android:layout_height="128sp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/admin" />

                <TextView
                    android:id="@+id/admintext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="60sp"
                    android:clickable="true"
                    android:onClick="login"
                    android:text="@string/homeadmintext"
                    android:textColor="@color/headerfooterfontcolor"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="128sp"
                    android:layout_height="128sp"
                    android:layout_marginTop="10sp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/customer" />

                <TextView
                    android:id="@+id/customertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="60sp"
                    android:text="@string/homecustomertext"
                    android:textColor="@color/headerfooterfontcolor"
                    android:textSize="25sp"
                    android:clickable="true"
                    android:onClick="login"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>